refactor: unit tests, cb
